[gd_scene load_steps=9 format=3 uid="uid://cqmsm5j5c5ur2"]

[ext_resource type="Script" path="res://13_TOOLS_UI/Quest_Selection/Quest_Button.gd" id="1_oqfn8"]
[ext_resource type="Resource" uid="uid://61umivwjjcjs" path="res://12_INVENTORY/Words_note/Birds_goLighthouse_note.tres" id="2_25yu0"]
[ext_resource type="Shader" uid="uid://bhctfh42jxjgh" path="res://12_INVENTORY/Photo/Photo_ui_prefab_fadeIn.tres" id="3_irx3n"]
[ext_resource type="Texture2D" uid="uid://dvlnqtm1lcg0r" path="res://12_INVENTORY/Photo/IMG/Birds_photo.png" id="4_6rexa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kifc2"]
bg_color = Color(0.831373, 0.717647, 0.588235, 1)
border_color = Color(0.0117647, 0.113725, 0.129412, 1)
border_blend = true
shadow_color = Color(0, 0, 0, 0.211765)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ejfy"]
bg_color = Color(0.909804, 0.835294, 0.752941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qna0w"]
bg_color = Color(0.909804, 0.835294, 0.752941, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hrjbm"]
shader = ExtResource("3_irx3n")
shader_parameter/Opacity = 1.0

[node name="Quest_Button" type="Button"]
custom_minimum_size = Vector2(220, 150)
offset_right = 250.0
offset_bottom = 150.0
focus_mode = 1
theme_override_colors/font_color = Color(0.0235294, 0.176471, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_kifc2")
theme_override_styles/hover = SubResource("StyleBoxFlat_1ejfy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qna0w")
theme_override_styles/disabled = SubResource("StyleBoxFlat_kifc2")
theme_override_styles/focus = SubResource("StyleBoxFlat_kifc2")
text = "SELECT THIS QUEST"
script = ExtResource("1_oqfn8")
quest_data = ExtResource("2_25yu0")

[node name="PhotoUi_Prefab" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = 199.864
offset_top = -61.6397
offset_right = 199.864
offset_bottom = -61.6397
scale = Vector2(0.206779, 0.206779)

[node name="Photo_Border" type="ColorRect" parent="PhotoUi_Prefab"]
layout_mode = 1
offset_right = 582.0
offset_bottom = 594.0
color = Color(0.792157, 0.65098, 0.482353, 1)

[node name="Photo_render" type="TextureRect" parent="PhotoUi_Prefab/Photo_Border"]
material = SubResource("ShaderMaterial_hrjbm")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6rexa")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
